--- a/style.css
+++ b/style.css
@@ -1,19 +1,11 @@
 @font-face {
-    font-family : "NanumSquareR";
-    src : url("NanumSquareR.otf") format("opentype");
-    src : url("NanumSquareR.ttf") format("truetype");
-    src : url("NanumSquareOTF_acR.otf") format("opentype");
-    src : url("NanumSquare_acR.ttf") format("truetype");
-    font-weight : normal;
+    font-family: "AppleSDGothicNeoR00-01";
+    src: url("AppleSDGothicNeoR00-01.otf") format("opentype");
 }
 
-@font-face {
-    font-family : "NanumSquareB";
-    src : url("NanumSquareB.otf") format("opentype");
-    src : url("NanumSquareB.ttf") format("truetype");
-    src : url("NanumSquareOTF_acB.otf") format("opentype");
-    src : url("NanumSquare_acB.ttf") format("truetype");
-    font-weight : normal;
+@keyframes fadein {
+    from { opacity: 0; }
+    to { opacity: 1; }
 }
 
 * {
@@ -22,96 +14,51 @@
 }
 
 html {
-    font-family: "NanumSquareR";
+    font-family: "AppleSDGothicNeoR00-01";
     font-size: 62.5%;
 }
 
 body {
-    background-color: whitesmoke;
+    background-color: RGB(222, 222, 222);
 }
 
-.info {
-    display: flex;
-    align-items: flex-end;
+font {
+    color: #2e2e2e;
 }
 
-.icon {
-    margin-left: 15px;
-}
-
-#icon {
-    width: 30%;
-    height: auto;
-    max-width: 160px;
-    justify-content: end;
-}
-
-h3 {
-    color: rgb(30, 30, 30);
-    font-size: 1.5rem;
-}
-
-p {
-    color: rgb(30, 30, 30);
-}
+a {
+    color: inherit;
+    text-decoration: none;
+  }
 
 .wrap {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: auto;
-    min-width: 200px;
-    max-width: 150px;
-    max-height: 40px;
-    margin: 0 auto;
-}
-
-.icons {
-    position: relative;
-    /*
-    background-color: white;
-    box-shadow: 0px 0px 5px lightgrey;
-    */
-    border: solid lightgrey 1px;
-    border-radius: 100%;
-    width: 30px;
-    height: 30px;
-    margin: 5px;
-}
-
-#icons {
-    width: 15px;
-    height: auto;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
+    animation: fadein 1.5s;
+    -webkit-animation: fadein 1.5s;
+    animation-fill-mode: forwards;
+    opacity: 0;
 }
 
-hr {
-    height: 1.5px;
-    border: 0px;
-    background-color: whitesmoke;
-    margin-top: 25px;
-    margin-bottom: 25px;
-}
-
-.square {
-    background-color: white;
-    box-shadow: 0px 0px 5px lightgrey;
-    border-radius: 25px;
-    width: 20vw;
+.cheese {
+    width: 25vw;
     height: auto;
-    max-width: 150px;
-    min-width: 200px;
-    padding: 30px;
-    margin: 0 auto;
-    margin-bottom: 25px;
-}
-
-.all {
     position: absolute;
+
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
+    animation: fadein 1.5s;
+    -webkit-animation: fadein 1.5s;
+    animation-fill-mode: forwards;
+    opacity: 0;
+}
+
+ul {
+    list-style-type: none;
+    line-height: 200%;
 }
