--- a/style.css
+++ b/style.css
@@ -14,19 +14,18 @@ html {
 }
 
 body {
-    background-color: RGB(248, 248, 242);
+    background-color: #101010;
 }
 
-.brice {
+.CouncilSkies {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-
-    font-size: 1.5rem;
+    transform: translate(-42.5%, -50%);
 }
 
 .cheese {
+    color: #f0f0f0;
     position: absolute;
     top: 50%;
     left: 50%;
